WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285821
[iPadOS/visionOS] YouTube media controls never dismiss after tapping to skip a preroll ad
https://bugs.webkit.org/show_bug.cgi?id=285821
Summary
[iPadOS/visionOS] YouTube media controls never dismiss after tapping to skip ...
Wenson Hsieh
Reported
2025-01-12 14:27:47 PST
rdar://108748685
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-01-12 14:57:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38915
EWS
Comment 2
2025-01-12 16:56:03 PST
Committed
288780@main
(1fb3367b0a4f): <
https://commits.webkit.org/288780@main
> Reviewed commits have been landed. Closing PR #38915 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug